[tool.poetry]
name = "single-leader-replication"
version = "0.1.0"
description = ""
authors = ["Lily Chau <chauyeeki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.0"
uvicorn = "^0.51.0"
pydantic = "^2.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
